--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ reqwest = {version = "0.11.1", features= ["stream", "__rustls", "rustls-tls-webp
 url = "2.5.2"
 base64 = "0.22.1"
 tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
+randua = "0.1.6"
+rand = "0.8.5"
+regex = "1.11.1"
 
 [profile.dev]
 incremental = true
