--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 randua = "0.1.6"
 rand = "0.8.5"
 regex = "1.11.1"
+rustls = { version = "0.23.15", features = ["std"] }
+rustls-native-certs = "0.8.0"
 
 [profile.dev]
 incremental = true
