--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.8.5"
 regex = "1.11.1"
 rustls = { version = "0.23.15", features = ["std"] }
 rustls-native-certs = "0.8.0"
+ring = "0.17.8"
 
 [profile.dev]
 incremental = true
