--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 randua = "0.1.6"
 rand = "0.8.5"
 regex = "1.11.1"
-rustls = { version = "0.23.15", features = ["std"] }
+rustls = { version = "0.23.15", features = ["std", "ring"] }
 rustls-native-certs = "0.8.0"
 ring = "0.17.8"
 
