--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 randua = "0.1.6"
 regex = "1.11.1"
 rquest = { version = "0.26.2", features = ["boring-tls", "cookies", "json"] }
+jsonwebtoken = "9.3.0"
 
 
