--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ base64 = "0.22.1"
 tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 randua = "0.1.6"
 regex = "1.11.1"
-rquest = { version = "0.26.2", features = ["boring-tls", "cookies", "json"] }
+rquest = { version = "0.26.2", features = ["boring-tls", "cookies", "json", "websocket"] }
 jsonwebtoken = "9.3.0"
 
 
