--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ randua = "0.1.6"
 regex = "1.11.1"
 rquest = { version = "0.26.2", features = ["boring-tls", "cookies", "json", "websocket"] }
 jsonwebtoken = "9.3.0"
+futures-util = "0.3.31"
+flate2 = "1.0.34"
 
 
