--- a/discord/Cargo.toml
+++ b/discord/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
 serde = { version = "*", features = ["derive"]}
 serde_json = "*"
 url = "2.5.2"
@@ -15,4 +16,5 @@ rquest = { version = "=5.1.0", features = ["cookies", "json", "websocket"] }
 futures = "0.3.31"
 futures-util = "0.3.31"
 flate2 = { version = "1.0.34", features = ["zlib"] }
+spoofer = { version = "0.1.0", path = "../spoofer" }
 
